2013-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.gsl.R: Rewritten to use sourceCpp()

	* inst/unitTests/cpp/gsl.cpp: New C++ file with unit tests

 	* vignettes/RcppGSL-unitTests.Rnw: Minor tweaking

	* vignettes/RcppGSL-intro.Rnw: Added section on attributes

	* vignettes/buildVignette.R: Default to all .Rnw files in directory,
	also set boxes option to TRUE

2013-06-21  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/buildVignette.R: Added simple helper script to build
	the vignette(s) on the command-line (which requires highlight)

	* cleanup: Take some tasks that the vignette/Makefile had

	* src/fastLm.cpp: Minor improvement in computing std.error of est.

2013-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL/RcppGSL-intro.Rnw: Some fixes

2013-06-19  Romain Francois  <romain@r-enthusiasts.com>

	* vignettes/RcppGSL/RcppGSL-intro.Rnw: Converted back to use with
	package highlight (>= 0.4.2)

2012-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/bSpline/bSpline.cpp: New example for B-spline fit
	taken from GSL manual
	* inst/examples/bSpline/bSpline.cpp: R wrapper and illustration

2012-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL/RcppGSL-intro.Rnw: Switch to using Rcpp:::bib()
	and the bibtex file shipped with Rcpp

2012-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.0

	* inst/unitTests/runit.fastLm.R: expanded unit tests

	* R/inline.R: Use two variables in a new package-global environment
	to store RcppGSL compiler and linker flags

	* vignettes/RcppGSL/RcppGSL-intro.Rnw: Skip use of highlight for
	C++ and shell snippets to sidestep build issues on 32bit OSs

	* vignettes/RcppGSL.bib: updated references

2012-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: expanded summary() display as in RcppArmadillo

	* inst/NEWS.Rd: converted from ascii text to Rd format

	* vignettes/*: moved from inst/doc/* per newer R Policy
